--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Index</title>
 </head>
-<body>
+<body style="background-color: white">
 <div id="app">
 
 </div>
